fixed background property to overflow: auto;

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -25,8 +25,8 @@
 
 html, body {
   width: 100%;
-  height: 100%;
-  background-size: cover!important;
+  height:100%;
+    overflow:auto;
 }
 section {
   overflow: auto;
